--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,9 +2,12 @@ name: aoc
 version: 1.0.0
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
-  collection: ^1.15.0
-  quiver: ^3.0.1+1
-  tuple: ^2.0.0
+  collection: ^1.18.0
+  meta: ^1.11.0
+  quiver: ^3.2.1
+  test: ^1.24.9
+  timing: ^1.0.1
+  very_good_analysis: ^5.1.0
